# surigo-site

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
backend/: implementation_plan.md  main.py  pyproject.toml
backend/src/: ChatExchange.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: data.js  main.js  style.css
