[project]
name = "surigo-site-backend"
version = "0.1.0"
description = "Backend code for surigo-site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "sentence-transformers>=5.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
